# mimi_common_pkg

./: CMakeLists.txt  package.xml
action_server/: action_test.py  approach_person.py  enter_the_room.py  exe_action_plan.py  localize_object.py
config/: action_state.yaml  competition.yaml  demo.yaml  ggi.yaml  location_dict.yaml  object_mapping.yaml  ri.yaml  training.yaml
launch/: approach_person.launch  bf_common.launch  common_pkg.launch  ggi_common.launch  map_creation.launch  mimi_setup.launch
scripts/: common_action_client.py  common_function.py  location_setup.py  setup_location.py
